--- a/style.css
+++ b/style.css
@@ -96,3 +96,15 @@ a:active {
   color: rgb(64, 64, 64);
   background-color: transparent;
 }
+.fade-in {
+animation: fadeIn ease-in-out 3s;
+-webkit-animation: fadeIn ease-in-out 5s;
+-moz-animation: fadeIn ease-in-out 5s;
+-o-animation: fadeIn ease-in-out 5s;
+-ms-animation: fadeIn ease-in-out 5s;
+}
+@keyframes fadeIn {
+0% {opacity:0;}
+50%{opacity: 0.7;}
+100% {opacity:1;}
+}
