--- a/style.css
+++ b/style.css
@@ -108,3 +108,10 @@ animation: fadeIn ease-in-out 3s;
 50%{opacity: 0.7;}
 100% {opacity:1;}
 }
+
+.container2 h2{
+  margin-top: 20px;
+}
+.container2 span{
+  margin-top: 10px;
+}
